<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>message_transforms_demos</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="evanp922@gmail.com">ubuntu</maintainer>
  <license>MIT</license>

  <exec_depend>message_transforms_node</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
