<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>message_transforms_demos</name>
  <version>0.0.1</version>
  <description>Examples that show how to use the message transforms package</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <exec_depend>message_transforms</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
