<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>mobile_to_maritime</name>
  <version>0.0.1</version>
  <description>Nodes and launch files that transform ENU/FLU messages to NED/FSD messages</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/mobile_to_maritime.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/mobile_to_maritime/issues</url>

  <author>Evan Palmer</author>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
